Closed Bug 579801 Opened 15 years ago Closed 15 years ago

warning: array subscript has type 'char' in ImportCharSet::stricmp

Categories

(MailNews Core :: Import, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

mailnews/import/src/ImportCharSet.h: In static member function ‘static PRInt32 ImportCharSet::stricmp(const char*, const char*)’: 196: warning: array subscript has type ‘char’ 196: warning: array subscript has type ‘char’ 200: warning: array subscript has type ‘char’ 200: warning: array subscript has type ‘char’
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #458229 - Flags: review?(bienvenu)
Attachment #458229 - Flags: review?(bienvenu) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: