Bug 579801 warning: array subscript has type 'char' in ImportCharSet::stricmp r=bienvenu

--HG--
extra : rebase_source : 9e5a3b6cd40a4175a1d226f2047f29a55b9be40d